--- a/package.json
+++ b/package.json
@@ -58,12 +58,12 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.24.7",
-    "@types/node": "^20.14.2",
-    "@types/react": "^18.3.3",
+    "@types/node": "20.19.9",
+    "@types/react": "18.3.23",
     "babel-plugin-module-resolver": "^5.0.2",
     "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.3",
-    "typescript": "^5.4.5"
+    "typescript": "5.8.3"
   },
   "author": "dauber side project",
   "license": "MIT",
