--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-"target": "es2018",
-  "lib": ["dom", "dom.iterable", "esnext"],
+    "target": "es2018",
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "declaration": true,
-  "declarationMap": true,
+    "declarationMap": true,
     "skipLibCheck": true,
     "strict": true,
     "strictBindCallApply": true,
@@ -23,11 +23,10 @@
     "jsx": "preserve",
     "incremental": true,
     "baseUrl": ".",
-"paths": {
-      "@/*": ["./src/*"],
-      "@/components/*": ["src/components/*"],
-      "@/utils/*": ["src/utils/*"]
-    }
+    "paths": {
+      "@/*": ["src/*"]
+    },
+    "types": ["jest", "node"]
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "pages/**/*.ts", "pages/**/*.tsx"],
   "exclude": ["node_modules"]
