--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.3",
     "prettier": "^3.3.1",
+    "ts-jest": "^29.4.0",
     "typescript": "5.8.3"
   },
   "author": "dauber side project",
