--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.3.0",
     "formidable": "^3.5.4",
+    "googleapis": "^156.0.0",
     "lucide-react": "^0.453.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
