--- a/package.json
+++ b/package.json
@@ -65,11 +65,15 @@
     "@types/mocha": "^10.0.10",
     "@types/node": "20.19.9",
     "@types/react": "18.3.23",
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.30",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.2.0",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.3",
