--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,14 @@
-
-
 name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, feat/** ]
   pull_request:
     branches: [ master ]
+
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   quality:
