--- a/package.json
+++ b/package.json
@@ -7,9 +7,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest",
-    "fix": "eslint . --fix && prettier --write --single-quote --end-of-line auto ."
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx --max-warnings=0",
+    "lint:next": "next lint",
+    "typecheck": "tsc --noEmit",
+    "test": "jest --config jest.config.js",
+    "test:watch": "jest --watch --config jest.config.js",
+    "test:coverage": "jest --coverage --config jest.config.js",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix && prettier --write .",
+    "ci": "pnpm lint && pnpm typecheck && pnpm test && pnpm build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
@@ -63,6 +70,7 @@
     "@types/react": "18.3.23",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
+    "babel-jest": "^30.1.2",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.30",
@@ -70,6 +78,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.3",
