--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --ext .ts,.tsx,.js,.jsx --max-warnings=0",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
     "lint:next": "next lint",
     "typecheck": "tsc --noEmit",
     "test": "jest --config jest.config.js",
