--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,28 +1,16 @@
 {
   "editor.formatOnSave": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-
-  // Use Prettier for TypeScript too to avoid conflicts with Deno formatter
-  "[typescript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "prettier.prettierPath": "node_modules/prettier",
+  "[javascript]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
   },
-
-  // Enable the Deno extension only under this path
-  "deno.enablePaths": ["supabase/functions"],
-  "deno.lint": true,
-  "deno.unstable": [
-    "bare-node-builtins",
-    "byonm",
-    "sloppy-imports",
-    "unsafe-proto",
-    "webgpu",
-    "broadcast-channel",
-    "worker-options",
-    "cron",
-    "kv",
-    "ffi",
-    "fs",
-    "http",
-    "net"
-  ]
+  "[typescript]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
+  },
+  "[javascriptreact]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
+  }
 }
