--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
-  "framework": "nextjs",
-  "public": true,
-  "outputDirectory": ".next",
-  "devCommand": "npm run dev",
-  "source": "src/pages"
+  "buildCommand": "pnpm build",
+  "devCommand": "pnpm dev"
 }
