--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,8 @@ services:
       - SLACK_DAILY_DIGEST_WEBHOOK=${SLACK_DAILY_DIGEST_WEBHOOK:-}
       # Slack for Recipe 11: Weekly Summary
       - SLACK_WEEKLY_SUMMARY_WEBHOOK=${SLACK_WEEKLY_SUMMARY_WEBHOOK:-}
+      # KB API authentication
+      - KB_API_TOKEN=${KB_API_TOKEN:-}
       # Workspace root for scripts
       - WORKSPACE_ROOT=/workspace/dauberside.github.io-1
     ports:
